--- a/index.html
+++ b/index.html
@@ -95,12 +95,24 @@
         <p class="headProj">My Projects</p>
       </div>
       <div class="p1">
-        <p class="projName">Tree Climber</p>
+        <p class="projName">The Tree Race</p>
         <p class="desc">Game (Python)</p>
+        <a
+          class="desc"
+          href="https://github.com/mengstacy/pythongame.git"
+          target="_blank"
+          >Github Link</a
+        >
       </div>
       <div class="p2">
         <p class="projName">Meme Maker</p>
         <p class="desc">Image and caption generator (Java)</p>
+        <a
+          class="desc"
+          href="https://github.com/mengstacy/memegenerator.git"
+          target="_blank"
+          >Github Link</a
+        >
       </div>
       <div class="p3">
         <p class="projName">Sample HTML Website</p>
@@ -109,6 +121,12 @@
           Udemy course: Build Responsive Real-World Websites with HTML and CSS
           by Jonas Schmedtmann (HTML and CSS)
         </p>
+        <a
+          class="desc"
+          href="https://github.com/mengstacy/basicHTMLsite.git"
+          target="_blank"
+          >Github Link</a
+        >
       </div>
       <div class="p4">
         <p class="projName">Number Guessing Game</p>
@@ -117,6 +135,12 @@
           by Udemy course: The Complete JavaScript Course 2022: From Zero to
           Expert! by Jonas Schmedtmann (JavaScript)
         </p>
+        <a
+          class="desc"
+          href="https://github.com/mengstacy/numbergame.git"
+          target="_blank"
+          >Github Link</a
+        >
       </div>
     </div>
     <!-- Signup-->
