--- a/index.html
+++ b/index.html
@@ -98,20 +98,20 @@
         <p class="projName">The Tree Race</p>
         <p class="desc">Game (Python)</p>
         <a
-          class="desc"
+          class="button"
           href="https://github.com/mengstacy/pythongame.git"
           target="_blank"
-          >Github Link</a
+          >Github</a
         >
       </div>
       <div class="p2">
         <p class="projName">Meme Maker</p>
         <p class="desc">Image and caption generator (Java)</p>
         <a
-          class="desc"
+          class="button"
           href="https://github.com/mengstacy/memegenerator.git"
           target="_blank"
-          >Github Link</a
+          >Github</a
         >
       </div>
       <div class="p3">
@@ -122,10 +122,10 @@
           by Jonas Schmedtmann (HTML and CSS)
         </p>
         <a
-          class="desc"
+          class="button"
           href="https://github.com/mengstacy/basicHTMLsite.git"
           target="_blank"
-          >Github Link</a
+          >Github</a
         >
       </div>
       <div class="p4">
@@ -136,10 +136,10 @@
           Expert! by Jonas Schmedtmann (JavaScript)
         </p>
         <a
-          class="desc"
+          class="button"
           href="https://github.com/mengstacy/numbergame.git"
           target="_blank"
-          >Github Link</a
+          >Github</a
         >
       </div>
     </div>
